--- a/client/src/app/components/user/user.component.html
+++ b/client/src/app/components/user/user.component.html
@@ -4,11 +4,12 @@
     <input type="checkbox" id="check">
     <div class="login form">
       <header>Login</header>
-        <form action="#">
-          <input type="text" placeholder="Email" name="email" [(ngModel)]="credentials.email" required>
+        <form>
+          <input type="email" placeholder="Email" name="email" [(ngModel)]="credentials.email" required>
           <input type="password" placeholder="Password" name="password" [(ngModel)]="credentials.password" requried>
-          <input type="button" class="button" value="Login" (click)="onLogin()">
+          <button (click)="onLogin()">Login</button>
         </form>
+        <div class="error" *ngIf="this.loginError !== null">{{this.loginError}}</div>
         <div class="signup">
           <span class="signup">Don't have an account?
           <label for="check">Signup</label>
@@ -17,12 +18,13 @@
     </div>
     <div class="registration form">
       <header>Signup</header>
-      <form action="#">
+      <form>
         <input type="text" placeholder="Username" name="username" [(ngModel)]="registration.username" required>
-        <input type="text" placeholder="Email" name="email" [(ngModel)]="registration.email" required>
+        <input type="email" placeholder="Email" name="email" [(ngModel)]="registration.email" required>
         <input type="password" placeholder="Password" name="password" [(ngModel)]="registration.password" requried>
-        <input type="button" class="button" value="Signup" (click)="onRegister()">
+        <button (click)="onRegister()">Signup</button>
       </form>
+      <div class="error" *ngIf="this.registrationError !== null">{{this.registrationError}}</div>
       <div class="signup">
         <span class="signup">Already have an account?
         <label for="check">Login</label>
