--- a/client/src/app/components/user/user.component.scss
+++ b/client/src/app/components/user/user.component.scss
@@ -1,7 +1,6 @@
 .user {
   height: 86vh;
   width: 100vw;
-  // background-color: #3D82AB;
   background-image: url("../../../../public/user-background.jpg");
   background-blend-mode: multiply;
   background-position: center center;
@@ -46,7 +45,7 @@
   text-align: center;
   margin-bottom: 1.5rem;
 }
- .form input{
+ .form input, .form button {
    height: 60px;
    width: 100%;
    padding: 0 15px;
@@ -58,7 +57,7 @@
    outline: none;
    color: #91D4C2;
  }
- .form input:focus{
+ .form input:focus {
    box-shadow: 0 1px 0 rgba(192,192,192,0.3);
  }
 .form input::placeholder{
@@ -73,7 +72,7 @@
 .form a:hover{
   text-decoration: underline;
 }
-.form input.button{
+.form button{
   color: #fff;
   background: #45BB89;
   font-size: 1.2rem;
@@ -83,7 +82,7 @@
   cursor: pointer;
   transition: 0.4s;
 }
-.form input.button:hover{
+.form button:hover{
   background: #006653;
 }
 .signup{
@@ -96,4 +95,8 @@
 }
 .signup label:hover{
   text-decoration: underline;
+}
+.error {
+  color: red;
+  // font-weight: bold;
 }
