--- a/client/src/app/components/user/user.component.scss
+++ b/client/src/app/components/user/user.component.scss
@@ -43,14 +43,14 @@
   font-size: 2rem;
   font-weight: 500;
   text-align: center;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.2rem;
 }
  .form input, .form button {
    height: 60px;
    width: 100%;
    padding: 0 15px;
    font-size: 17px;
-   margin-bottom: 1.3rem;
+   margin-bottom: 1.2rem;
    background:transparent;
    border: none;
    border-radius: 6px;
@@ -78,7 +78,7 @@
   font-size: 1.2rem;
   font-weight: 500;
   letter-spacing: 1px;
-  margin-top: 1.7rem;
+  margin-top: 1.2rem;
   cursor: pointer;
   transition: 0.4s;
 }
@@ -97,6 +97,8 @@
   text-decoration: underline;
 }
 .error {
+  min-height: 30px;
   color: red;
-  // font-weight: bold;
+  font-size: 1.2rem;
+  text-align: center;
 }
