--- a/client/src/app/components/user/user.component.scss
+++ b/client/src/app/components/user/user.component.scss
@@ -43,14 +43,14 @@
   font-size: 2rem;
   font-weight: 500;
   text-align: center;
-  margin-bottom: 1.2rem;
+  margin-bottom: 1rem;
 }
  .form input, .form button {
    height: 60px;
    width: 100%;
    padding: 0 15px;
    font-size: 17px;
-   margin-bottom: 1.2rem;
+   margin-bottom: 1rem;
    background:transparent;
    border: none;
    border-radius: 6px;
@@ -78,7 +78,7 @@
   font-size: 1.2rem;
   font-weight: 500;
   letter-spacing: 1px;
-  margin-top: 1.2rem;
+  margin-top: 1rem;
   cursor: pointer;
   transition: 0.4s;
 }
@@ -97,8 +97,19 @@
   text-decoration: underline;
 }
 .error {
-  min-height: 30px;
+  min-height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.error .error-msg {
   color: red;
-  font-size: 1.2rem;
-  text-align: center;
+  font-weight: 550;
+  background: rgba(255, 182, 193, 1);
+  cursor: pointer;
+  padding: 6px 12px 6px 12px;
+  border-radius: 6px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
