--- a/client/src/app/components/user/user.component.scss
+++ b/client/src/app/components/user/user.component.scss
@@ -98,18 +98,20 @@
 }
 .error {
   min-height: 40px;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+}
+.error .error-msg {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.error .error-msg {
-  color: red;
-  font-weight: 550;
-  background: rgba(255, 182, 193, 1);
-  cursor: pointer;
-  padding: 6px 12px 6px 12px;
+  width: 100%;
+  background: rgba(255, 182, 193, 0.85);
   border-radius: 6px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  padding: 3px 3px 3px 3px;
+  color: red;
+  font-size: 17px;
+  font-weight: 500;
+  cursor: pointer;
 }
