--- a/client/src/app/components/user/user.component.scss
+++ b/client/src/app/components/user/user.component.scss
@@ -107,11 +107,11 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  background: rgba(255, 182, 193, 0.85);
+  background: rgba(255, 0, 0, 0.6);
   border-radius: 6px;
   padding: 3px 3px 3px 3px;
-  color: red;
-  font-size: 17px;
+  color: white;
+  font-size: 16px;
   font-weight: 500;
   cursor: pointer;
 }
