initial yum components

--- a/client/src/app/components/map/map.component.scss
+++ b/client/src/app/components/map/map.component.scss
@@ -6,7 +6,7 @@
 .events {
   height: 86vh;
   width: 100vw;
-  background-color: #3D82AB;
+  background: linear-gradient(.25turn, #3D82AB, 75%, #45BB89);
   color: #91D4C2;
 }
 
