--- a/client/src/app/components/myyums/myyums.component.html
+++ b/client/src/app/components/myyums/myyums.component.html
@@ -1,3 +1,20 @@
 <div class="my-yums">
-  <p>My Yums</p>
+
+  <mat-card class="example-card" *ngFor="let yum of yums">
+  <mat-card-header>
+    <mat-card-title-group>
+      <mat-card-title>{{yum.name}}</mat-card-title>
+      <mat-card-subtitle>{{yum.type}}</mat-card-subtitle>
+      <!-- <img mat-card-sm-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" > -->
+    </mat-card-title-group>
+  </mat-card-header>
+  <mat-card-content>
+    <span>{{longText}}</span>
+    <div>
+      <button>Review</button>
+      <button>Remove</button>
+    </div>
+  </mat-card-content>
+</mat-card>
+
 </div>
