--- a/client/src/app/components/reviews/reviews.component.scss
+++ b/client/src/app/components/reviews/reviews.component.scss
@@ -1,6 +1,6 @@
 .reviews {
   height: 86vh;
   width: 100vw;
-  background-color: #3D82AB;
+  background: linear-gradient(.25turn, #3D82AB, 75%, #45BB89);
   color: #91D4C2;
 }
