--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
 </mat-toolbar>
 
 <mat-toolbar *ngIf="this.router.url === '/myyums'">
-  <span>My Yums</span>
+  <span>Yums</span>
 </mat-toolbar>
 
 <mat-toolbar *ngIf="this.router.url === '/search'">
@@ -24,7 +24,7 @@
 </mat-toolbar>
 
 <mat-toolbar *ngIf="this.router.url === '/user'">
-  <span>Account</span>
+  <span>Profile</span>
   <div *ngIf="this.getUser() !== null">
     <span>{{getUser()}}: </span>
     <button id="logout" (click)="onLogout()">Logout</button>
