add footer h6 tags and add yums array to user model

--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -3,25 +3,30 @@
     <button mat-icon-button>
       <mat-icon>home</mat-icon>
     </button>
+    <h6>Home</h6>
   </a>
   <a routerLink="/myyums">
     <button mat-icon-button>
       <mat-icon>restaurant_menu</mat-icon>
     </button>
+    <h6>Yums</h6>
   </a>
   <a routerLink="/search">
     <button mat-icon-button>
       <mat-icon>search</mat-icon>
     </button>
+    <h6>Search</h6>
   </a>
   <a routerLink="/reviews">
     <button mat-icon-button>
       <mat-icon>rate_review</mat-icon>
     </button>
+    <h6>Reviews</h6>
   </a>
   <a routerLink="/user">
     <button mat-icon-button>
       <mat-icon>person</mat-icon>
     </button>
+    <h6>Profile</h6>
   </a>
 </mat-toolbar>
