--- a/client/src/app/components/map/map.component.scss
+++ b/client/src/app/components/map/map.component.scss
@@ -1,10 +1,10 @@
 .map {
-  height: 86vh;
-  width: 100%;
+  height: 84vh;
+  width: 100vw;
 }
 
 .events {
-  height: 86vh;
+  height: 84vh;
   width: 100vw;
   background: linear-gradient(.25turn, #3D82AB, 75%, #45BB89);
   color: #91D4C2;
