--- a/client/src/app/components/myyums/myyums.component.html
+++ b/client/src/app/components/myyums/myyums.component.html
@@ -10,7 +10,7 @@
       <span id="yum-type">{{yum.type}}</span>
     </div>
     <div class="yum-content">
-      <span>1234 Food Street</span>
+      <span>Vancouver</span>
     </div>
     <div class="yum-actions">
       <button class="yum-button" (click)="onReview()">Review</button>
