--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -25,7 +25,7 @@
 
 <mat-toolbar *ngIf="this.router.url === '/user'">
   <span>Profile</span>
-  <div *ngIf="this.getUser() !== null">
+  <div class ="logout" *ngIf="this.getUser() !== null">
     <span>{{getUser()}}: </span>
     <button id="logout" (click)="onLogout()">Logout</button>
   </div>
