--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -2,26 +2,31 @@ mat-toolbar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   background-color: #003853;
   color: #91D4C2;
-  height: 7vh;
+  height: 8vh;
 }
 
 mat-toolbar button {
+  display: flex;
   background-color: transparent;
   color: #91D4C2;
-  border: none;
 }
-
 mat-toolbar button:hover {
   color: #45BB89;
 }
-
 mat-toolbar button:active {
   background-color: rgb(0, 0, 0, 0.15);
   border-radius: 25%;
 }
 
+.logout {
+  display: flex;
+  flex-direction: row;
+}
+
 #logout {
   text-decoration: underline;
+  margin-left: 6px;
 }
