add clicks event to map

--- a/client/src/app/components/map/map.component.html
+++ b/client/src/app/components/map/map.component.html
@@ -10,6 +10,7 @@
         width="100vw"
         [options]="mapOptions"
         (mapInitialized)="handleMapInitialized($event)"
+        (mapClick)="click($event)"
       ></google-map>
     </mat-sidenav-content>
   </mat-sidenav-container>
