first working version of places data on click

--- a/client/src/app/components/map/map.component.html
+++ b/client/src/app/components/map/map.component.html
@@ -5,6 +5,7 @@
     ></mat-sidenav>
     <mat-sidenav-content>
       <google-map
+        id="gmap"
         *ngIf="showMap"
         height="84vh"
         width="100vw"
