style change for readability

--- a/client/src/app/components/search/search.component.scss
+++ b/client/src/app/components/search/search.component.scss
@@ -2,9 +2,11 @@
   height: 84vh;
   width: 100vw;
   // background: linear-gradient(.25turn, #3D82AB, 75%, #45BB89);
-   background-image: url("../../../../public/yums.jpg");
-  background-blend-mode: multiply;
-  background-position: center center;
-  background-size: cover;
+  // background-image: url("../../../../public/yums.jpg");
+  // background-blend-mode: multiply;
+  // background-position: center center;
+  // background-size: cover;
+  background-color: #3d82ab;
+  background-image: url("https://transparenttextures.com/patterns/tileable-wood.png");
   color: #91D4C2;
 }
