--- a/client/src/app/components/map/map.component.scss
+++ b/client/src/app/components/map/map.component.scss
@@ -6,7 +6,8 @@
 .events {
   height: 84vh;
   width: 100vw;
-  background: linear-gradient(.25turn, #3D82AB, 75%, #45BB89);
+  background-color: #3d82ab;
+  background-image: url("https://transparenttextures.com/patterns/tileable-wood.png");
   color: #91D4C2;
 }
 
