--- a/client/src/app/components/user/user.component.scss
+++ b/client/src/app/components/user/user.component.scss
@@ -2,10 +2,12 @@
   height: 84vh;
   width: 100vw;
   // background: linear-gradient(.25turn, #3D82AB, 80%, #45BB89);
-  background-image: url("../../../../public/user.jpg");
-  background-blend-mode: multiply;
-  background-position: center center;
-  background-size: cover;
+  // background-image: url("../../../../public/user.jpg");
+  // background-blend-mode: multiply;
+  // background-position: center center;
+  // background-size: cover;
+  background-color: #3d82ab;
+  background-image: url("https://transparenttextures.com/patterns/tileable-wood.png");
   color: #91D4C2;
   box-sizing: border-box;
 }
