--- a/client/src/app/components/map/map.component.scss
+++ b/client/src/app/components/map/map.component.scss
@@ -18,6 +18,72 @@ mat-sidenav {
   color: #91D4C2;
 }
 
+// Hide close button in info window
+::ng-deep button.gm-ui-hover-effect {
+  visibility: hidden;
+}
+
+// Override info window padding on top and left
+::ng-deep .gm-style .gm-style-iw-c {
+  padding: 0;
+}
+
+// Override info window white space on right and bottom
+::ng-deep .gm-style-iw .gm-style-iw-d {
+  overflow: auto !important;
+}
+
 map-info-window {
-  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: #91D4C2;
+  width: 200px;
+  height: 300px;
+  margin: 0;
+  padding: 0;
+  background: rgba(0,56,83,1)
+}
+
+map-info-window img {
+  width: 200px;
+  height: 150px;
+  border-radius: 6px;
+}
+
+.info-window {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 150px;
+  width: 200px;
+  padding: 0px 12px 0px 12px;
+}
+
+.info-window-name {
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  // border: 1px solid red;
+}
+
+.info-window-rating {
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  // border: 1px solid yellow;
+}
+
+.info-window-buttons {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  // border: 1px solid white;
 }
