--- a/client/src/app/components/map/map.component.scss
+++ b/client/src/app/components/map/map.component.scss
@@ -23,6 +23,12 @@ mat-sidenav {
   visibility: hidden;
 }
 
+// Background colour for bottom triangle of info window
+::ng-deep .gm-style .gm-style-iw-tc:after {
+  background: rgba(0,56,83,1);
+  border: none;
+}
+
 // Override info window padding on top and left
 ::ng-deep .gm-style .gm-style-iw-c {
   padding: 0;
@@ -63,20 +69,66 @@ map-info-window img {
   padding: 0px 12px 0px 12px;
 }
 
+.info-reviews {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 200px;
+  padding: 6px 12px 6px 12px;
+  background: rgba(0,56,83,1);
+  color: #91D4C2;
+  // border: 4px solid red;
+}
+
+#info-reviews-address, #info-reviews-phone, #info-reviews-rating {
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 6px;
+}
+
+#info-reviews-text {
+  text-align: center;
+  font-size: 13px;
+  margin-bottom: 6px;
+}
+#info-review {
+  margin-bottom: 6px;
+}
+#info-review:last-child {
+  margin-bottom: 0;
+}
+
 .info-window-name {
   width: 100%;
   text-align: center;
-  font-size: 20px;
-  font-weight: 600;
-  // border: 1px solid red;
+  font-size: 18px;
+  font-weight: 500;
 }
 
 .info-window-rating {
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
   text-align: center;
-  font-size: 20px;
-  font-weight: 600;
-  // border: 1px solid yellow;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+#name:hover {
+  cursor: pointer;
+  color: #45BB89;
+}
+
+#back {
+  margin-bottom: 6px;
+}
+
+#back:hover {
+  cursor: pointer;
+  color: #45BB89;
 }
 
 .info-window-buttons {
@@ -85,5 +137,31 @@ map-info-window img {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  // border: 1px solid white;
+}
+
+.info-window-buttons .add, .info-window-buttons .close {
+  color: #fff;
+  background: #45BB89;
+  font-size: 1.2rem;
+  font-weight: 500;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: 0.4s;
+  border: none;
+  border-radius: 6px;
+  height: 30px;
+  width: 65px;
+  padding: 2px;
+}
+
+.info-window-buttons .add:hover {
+  background: #006653;
+}
+
+#close {
+  background: rgb(200, 0, 0);
+}
+
+#close:hover {
+  background: rgb(120, 0, 0);
 }
