--- a/client/src/app/components/myyums/myyums.component.scss
+++ b/client/src/app/components/myyums/myyums.component.scss
@@ -57,14 +57,12 @@
   align-items: center;
 }
 #yum-name {
+  text-align: center;
   font-size: 1.2rem;
   font-weight: bold;
 }
 #yum-name:hover {
   text-decoration: underline;
-}
-#yum-type {
-  font-size: 0.9rem;
 }
 
 .yum-content {
