--- a/client/src/app/components/user/user.component.scss
+++ b/client/src/app/components/user/user.component.scss
@@ -6,8 +6,9 @@
   // background-blend-mode: multiply;
   // background-position: center center;
   // background-size: cover;
-  background-color: #3d82ab;
-  background-image: url("https://transparenttextures.com/patterns/tileable-wood.png");
+  background-color: black;
+  // background-color: #3d82ab;
+  // background-image: url("https://transparenttextures.com/patterns/tileable-wood.png");
   color: #91D4C2;
   box-sizing: border-box;
 }
