--- a/client/src/app/components/map/map.component.scss
+++ b/client/src/app/components/map/map.component.scss
@@ -6,7 +6,7 @@
 .events {
   height: 84vh;
   width: 100vw;
-  background-color: black;
+  background-color: #3d82ab;
   // background-image: url("https://transparenttextures.com/patterns/tileable-wood.png");
   color: #91D4C2;
 }
