--- a/client/src/app/components/myyums/myyums.component.scss
+++ b/client/src/app/components/myyums/myyums.component.scss
@@ -6,8 +6,7 @@
   // background-blend-mode: multiply;
   // background-position: center center;
   // background-size: cover;
-  background-color: black;
-  // background-color: #3d82ab;
+  background-color: #3d82ab;
   // background-image: url("https://transparenttextures.com/patterns/tileable-wood.png");
   display: flex;
   flex-direction: column;
